= moved SBT runner -> SBT Global settings = refactored various settings classes