@@ -1,5 +1,4 @@
-package org.jetbrains.sbt
-package project.settings
+package org.jetbrains.sbt.settings
 
 import java.util
 
@@ -10,7 +9,9 @@ import com.intellij.openapi.project.Project
 import com.intellij.openapi.util.io.FileUtil
 import com.intellij.util.containers.ContainerUtilRt
 import com.intellij.util.xmlb.annotations.AbstractCollection
+import org.jetbrains.sbt.project.settings.{SbtProjectSettings, SbtProjectSettingsListener, SbtProjectSettingsListenerAdapter, SbtTopic}
 
+import scala.beans.BeanProperty
 import scala.collection.JavaConverters._
 
 /**
@@ -24,9 +25,30 @@ import scala.collection.JavaConverters._
     new Storage(file = StoragePathMacros.PROJECT_CONFIG_DIR + "/sbt.xml", scheme = StorageScheme.DIRECTORY_BASED)
   )
 )
-class SbtSettings(project: Project)
-  extends AbstractExternalSystemSettings[SbtSettings, SbtProjectSettings, SbtSettingsListener](SbtTopic, project)
-  with PersistentStateComponent[SbtSettingsState]{
+class SbtSystemSettings(project: Project)
+  extends AbstractExternalSystemSettings[SbtSystemSettings, SbtProjectSettings, SbtProjectSettingsListener](SbtTopic, project)
+  with PersistentStateComponent[SbtSystemSettingsState]{
+
+  @BeanProperty
+  var customLauncherEnabled: Boolean = false
+
+  @BeanProperty
+  var customLauncherPath: String = ""
+
+  @BeanProperty
+  var maximumHeapSize: String = "768"
+
+  @BeanProperty
+  var vmParameters: String = "-XX:MaxPermSize=384M"
+
+  @BeanProperty
+  var customVMEnabled: Boolean = false
+
+  @BeanProperty
+  var customVMPath: String = ""
+
+  @BeanProperty
+  var customSbtStructureDir: String = ""
 
   def checkSettings(old: SbtProjectSettings, current: SbtProjectSettings) {
     if (old.jdkName != current.jdkName) {
@@ -44,22 +66,35 @@ class SbtSettings(project: Project)
   }
 
   def getState = {
-    val state = new SbtSettingsState()
+    val state = new SbtSystemSettingsState()
     fillState(state)
+    state.customLauncherEnabled = customLauncherEnabled
+    state.customLauncherPath    = customLauncherPath
+    state.maximumHeapSize       = maximumHeapSize
+    state.vmParameters          = vmParameters
+    state.customVMEnabled       = customVMEnabled
+    state.customVMPath          = customVMPath
+    state.customSbtStructureDir = customSbtStructureDir
     state
   }
 
-  def loadState(state: SbtSettingsState) {
+  def loadState(state: SbtSystemSettingsState) {
     super[AbstractExternalSystemSettings].loadState(state)
+    customLauncherEnabled = state.customLauncherEnabled
+    customLauncherPath    = state.customLauncherPath
+    maximumHeapSize       = state.maximumHeapSize
+    vmParameters          = state.vmParameters
+    customVMEnabled       = state.customVMEnabled
+    customVMPath          = state.customVMPath
+    customSbtStructureDir = state.customSbtStructureDir
   }
 
   def subscribe(listener: ExternalSystemSettingsListener[SbtProjectSettings]) {
-    val adapter = new SbtSettingsListenerAdapter(listener)
+    val adapter = new SbtProjectSettingsListenerAdapter(listener)
     getProject.getMessageBus.connect(getProject).subscribe(SbtTopic, adapter)
   }
 
-  def copyExtraSettingsFrom(settings: SbtSettings) {
-  }
+  def copyExtraSettingsFrom(settings: SbtSystemSettings) {}
 
   def getLinkedProjectSettings(module: Module): SbtProjectSettings = {
     val linkedSettings = getLinkedProjectsSettings.asScala
@@ -79,12 +114,33 @@ class SbtSettings(project: Project)
   }
 }
 
-object SbtSettings {
-  def getInstance(project: Project) = ServiceManager.getService(project, classOf[SbtSettings])
+object SbtSystemSettings {
+  def getInstance(project: Project) = ServiceManager.getService(project, classOf[SbtSystemSettings])
 }
 
-class SbtSettingsState extends AbstractExternalSystemSettings.State[SbtProjectSettings] {
+class SbtSystemSettingsState extends AbstractExternalSystemSettings.State[SbtProjectSettings] {
   private val projectSettings = ContainerUtilRt.newTreeSet[SbtProjectSettings]()
+
+  @BeanProperty
+  var customLauncherEnabled: Boolean = false
+
+  @BeanProperty
+  var customLauncherPath: String = ""
+
+  @BeanProperty
+  var maximumHeapSize: String = "768"
+
+  @BeanProperty
+  var vmParameters: String = "-XX:MaxPermSize=384M"
+
+  @BeanProperty
+  var customVMEnabled: Boolean = false
+
+  @BeanProperty
+  var customVMPath: String = ""
+
+  @BeanProperty
+  var customSbtStructureDir: String = ""
 
   @AbstractCollection(surroundWithTag = false, elementTypes = Array(classOf[SbtProjectSettings]))
   def getLinkedExternalProjectsSettings: util.Set[SbtProjectSettings] = {
